--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "lint": "eslint -c ./.eslintrc.json --ignore-path .gitignore './**/*.js'",
-    "lint-fix": "eslint -c ./.eslintrc.json --fix --ignore-path .gitignore './**/*.js'"
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "prettier": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.18"
+    "mongoose": "^5.10.18",
+    "dotenv": "^8.2.0",
+    "body-parser": "1.19.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
