--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,15 @@
   },
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"]
-  }
+    "prettier/prettier": ["error"],
+    "eol-last": ["error", "always"]
+  },
+  "overrides": [
+    {
+      "files": ["./index.js"],
+      "rules": {
+        "no-console": ["off"]
+      }
+    }
+  ]
 }
