--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^5.0.4",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1"
   }
