--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/AlexisPucheta/caldar-be#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.10.18",
+    "body-parser": "1.19.0",
     "dotenv": "^8.2.0",
-    "body-parser": "1.19.0"
+    "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "joi-objectid": "^3.0.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.18"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
