--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.2.2",
+    "firebase-admin": "^9.4.2",
     "joi": "^17.3.0",
     "joi-objectid": "^3.0.1",
     "mongodb": "^3.6.3",
